build: migrate to java 17
ING-3775