@@ -19,8 +19,8 @@ plugins {
 
 apply plugin: 'org.standardout.eclipseconfig'
 
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 group = 'to.wetransform'
 
@@ -38,20 +38,18 @@ version = '5.1.0-SNAPSHOT'
 repositories {
   // mavenLocal() //XXX for testing
 
+  // merge both snapshot and release repositories to virtual repository named local
+  // because gradle was reporting error if it encountered dependencies from snapshots
+  // but libs-release-local was placed before snapshots here in the hierarchy and also
+  // vice-versa case when dependencies were encountered from release but snapshots
+  // was placed before release
   maven { // wetransform release repository (HALE releases and Eclipse dependencies)
-    url 'https://artifactory.wetransform.to/artifactory/libs-release-local'
-  }
-  maven { // wetransform snapshot repository (HALE snapshots)
-    url 'https://artifactory.wetransform.to/artifactory/libs-snapshot-local'
+    url 'https://artifactory.wetransform.to/artifactory/local'
   }
 
   // this needs to be defined before jcenter/MavenCentral for retrieving JAI
   maven {
     url 'https://repo.osgeo.org/repository/release/'
-  }
-
-  maven { // HALE artifactory (dependencies for HALE)
-    url 'https://artifactory.wetransform.to/artifactory/ext-release-local'
   }
 
   mavenCentral()
@@ -183,7 +181,9 @@ applicationDefaultJvmArgs = [
   '-Dcache.level1.enabled=false',
   '-Dcache.level1.size=0',
   '-Dcache.level2.enabled=false',
-  '-Dcache.level2.size=0'
+  '-Dcache.level2.size=0',
+  '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
+  '--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED'
 ]
 
 /*
